--- a/_config.yml
+++ b/_config.yml
@@ -455,7 +455,7 @@ content:
     content:
       - layout: left
         title: Powerlogic (acquired by Cast Group)
-        link: powerlogic.com.br        
+        link: www.powerlogic.com.br        
         sub_title: Senior Software Architect (Java Technology Mentor) 
         caption: December 2008 - September 2009
         quote: >
@@ -491,7 +491,7 @@ content:
     content:
       - layout: left
         title: Powerlogic (acquired by Cast Group)
-        link: powerlogic.com.br        
+        link: www.powerlogic.com.br        
         sub_title: Java Architect 
         caption: October 2002 - May 2003
         quote: >
