--- a/_config.yml
+++ b/_config.yml
@@ -550,7 +550,7 @@ content:
         title: Universidade do Sul de Santa Catarina
         link: www.unisul.br
         caption: 2014
-        sub_title: A. A. Information Technology Management
+        sub_title: AA. Information Technology Management
 
   - title: 
     layout: list # Type of content section (list/text)
