--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ version: 2
 name: Juarez Barbosa Junior
 title: Azure Developer Engagement Lead - Microsoft
 email: juarez.barbosa@gmail.com
-website: https://juarezjunior.github.io/
+website: https://juarezjuniorgithub.github.io/
 
 # Dark Mode (true/false/never)
 darkmode: false
