--- a/_config.yml
+++ b/_config.yml
@@ -177,6 +177,7 @@ content:
       - [Quorum on Azure Blockchain Service — Part 2 — Deploy a smart contract with VS Code](https://juarezjunior.medium.com/quorum-on-azure-blockchain-service-part-2-deploy-a-smart-contract-with-vs-code-89dedc63afc)
       - [Quorum on Azure Blockchain Service — Part 3— Interact with your smart contract](https://juarezjunior.medium.com/quorum-on-azure-blockchain-service-part-3-interact-with-your-smart-contract-f9527d08d3d8)
       - [How-to: Deploy your first Hyperledger Fabric components with Azure Kubernetes Service (AKS)](https://juarezjunior.medium.com/how-to-deploy-your-first-hyperledger-fabric-components-with-azure-kubernetes-service-aks-760563d9d543)
+      - [Blockchain — Easier than you think!](https://medium.com/@curiocity30/blockchain-easier-than-you-think-e2a36a59b69d)
       - [Blockchain workshop design thinking and technical workshop](https://www.slideshare.net/juarezjunior/blockchain-workshop-design-thinking-and-technical-workshop)
       - [Oracle Blockchain Experience Day](https://www.slideshare.net/juarezjunior/oracle-blockchain-experience-day)
       - [Oracle Blockchain Platform](https://www.slideshare.net/juarezjunior/oracle-blockchain-platform)
@@ -240,9 +241,11 @@ content:
       - [Azure IoT Central — Quick hands-on guide](https://juarezjunior.medium.com/azure-iot-central-hands-on-guide-9fdec8e3cd08)
       - [Oracle IoT Cloud Service - Application Development Basics](https://juarezjunior.medium.com/oracle-iot-cloud-service-application-development-basics-9cbe11ce951c)
       - [Oracle IoT Cloud Service — How to Provision an IoT Enterprise Service Instance](https://juarezjunior.medium.com/oracle-iot-cloud-service-how-to-create-the-iot-enterprise-service-instance-2d9bb7e46d1e)      
+      - [What Makes a City Smart?](https://medium.com/@curiocity30/what-makes-a-city-smart-d94e7534f173)      
 
       DevOps, Databases, AI
       - [Azure DevOps with DV and GitHub](https://www.slideshare.net/juarezjunior/azure-devops-with-dv-and-github)
+      - [Are we about to fail the Turing Test?](https://medium.com/@curiocity30/are-we-about-to-fail-the-turing-test-cb646d5fc29c)
       - [Artificial Intelligence and Machine Learning with the Oracle Data Science Cloud](https://www.slideshare.net/juarezjunior/artificial-intelligence-and-machine-learning-with-the-oracle-data-science-cloud)
       - [Oracle NoSQL Database — How to run NoSQL Database Community Edition with a VirtualBox VM](https://juarezjunior.medium.com/oracle-nosql-database-how-to-run-nosql-database-community-edition-with-a-virtualbox-vm-1b31bc63fc7b)
       - [Oracle Autonomous Data Warehouse Cloud Service (ADW), Part 1: How to provision an ADW database](https://juarezjunior.medium.com/oracle-autonomous-data-warehouse-cloud-service-adw-part-1-how-to-provision-an-adw-database-2225ecc854b)
