--- a/_config.yml
+++ b/_config.yml
@@ -393,7 +393,7 @@ content:
         quote: >
           https://www.ibm.com/watson
         description: | # this will include new lines to allow paragraphs 
-            Redbooks Thought Leader for IBM Mobile and IBM Technical Rock Star for Cloud, awards received as a result of my technical expertise. I’ve acted as a Technical Evangelist for the IBM Watson Cloud and MobileFirst initiatives. Excellent social media actions with outstanding contributions to IBM in the scope of their IBM social media residency programs.
+            I acted as a Senior Software Architect and Evangelist for IBM Watson in Ireland, focusing on Java software engineering and architecture. At that time, I was awarded four (4) times in a row as an IBM Technical Rock Star for Cloud in Europe due to solid contributions to IBM Cloud,  eminence, and technical expertise. Excellent social media actions related to technical evangelism in the scope of IBM's social media advocacy. 
 
   - title: 
     layout: list # Type of content section (list/text)
