--- a/_config.yml
+++ b/_config.yml
@@ -519,7 +519,7 @@ content:
         quote: >
           https://www.unisys.com/offerings/application-services
         description: | # this will include new lines to allow paragraphs    
-            I acted as a Java Security Architect for Unisys to architect and code several security-related components to support their SSO (Single Sign-On) modules. The modules supported all the security and non-functional requirements of an integration project with six (6) legacy systems, a workflow solution, an LDAP cluster, a cluster of Java EE servers, and two mainframe systems.
+            I acted as a Java Security Architect for Unisys to architect and code several security-related components to support their SSO (Single Sign-On) modules. The modules supported all the security and non-functional requirements of an integration project comprising six (6) legacy systems, a workflow solution, an LDAP cluster, a cluster of Java EE servers, and two mainframe systems.
   - title: 
     layout: list # Type of content section (list/text)
     content:
@@ -531,7 +531,7 @@ content:
         quote: >
           https://www.accenture.com/ie-en/industries/industrial-equipment-index
         description: | # this will include new lines to allow paragraphs  
-
+            I acted as a Software and Hardware Developer to support the design and implementation of an industrial automation specialist system called SCORE, comprising both the hardware and software designs. The solution used the QNX operating system, Echelon's LonWorks networking protocol, and the C and C++ language. My contributions were more towards the implementation of the hardware and firmware components.
   - title: 
     layout: list # Type of content section (list/text)
     content:
@@ -543,7 +543,7 @@ content:
         quote: >
           https://www.accenture.com/ie-en/industries/industrial-equipment-index
         description: | # this will include new lines to allow paragraphs           
-
+            I acted as a Software and Automation Systems Developer to support the implementation of several industrial automation systems. The solutions comprised some SCADA (Supervisory Control and Data Acquisition) systems, PLCs (Programmable Logic Controllers), the C and C++ programming languages, and Microsoft Visual C++. 
   - title: Education # Title for the section
     layout: list # Type of content section (list/text)
     content:
