--- a/_config.yml
+++ b/_config.yml
@@ -97,16 +97,16 @@ content:
       - [BRIFW - Brazil Immersive Fashion Week - Immersive Talk - Blockchain 101](https://twitter.com/juarezjunior/status/1452949631097257987)        
       - [Microsoft Ignite 2021 - Get to know the dev communities and partners in Ireland](https://myignite.microsoft.com/sessions/15fe5d38-2fb1-488c-8e9d-371e5ada2180?source=sessions)
       - [Microsoft Ignite 2021 - Get to know the dev communities and partners in Ireland - YT](https://www.youtube.com/watch?v=r7wmz4-RXM0)            
-      - [Blockchain on Azure for Developers](https://mktoevents.com/Microsoft+Event/272492/157-GQE-382?ocid=AID2423380_TWITTER_oo_spl100002029056646)             
+      - [Blockchain on Azure for Developers](https://mktoevents.com/Microsoft+Event/272492/157-GQE-382)             
       - [Microsoft Webinar: Machine Learning at scale with Microsoft and Kainos](https://mktoevents.com/Microsoft+Event/304788/157-GQE-382)
       - [Microsoft Webinar: Cybersecurity Day with Microsoft and Avanade](https://mktoevents.com/Microsoft+Event/308598/157-GQE-382)
       - [Test.js Summit - Talk: Microsoft Loves Javascript](https://twitter.com/TestJSSummit/status/1459308792785608707)
-      - [Test.js Summit - Workshop: Static Web Apps demo – CI/CD, Deployment and Test Pipeline on Azure (hands-on lab)](https://portal.gitnation.org/contents/static-web-apps-demo-cicd-deployment-and-test-pipeline-on-azure)
+      - [Test.js Summit - Workshop: Static Web Apps demo – CICD, Deployment and Test Pipeline on Azure - hands-on lab](https://portal.gitnation.org/contents/static-web-apps-demo-cicd-deployment-and-test-pipeline-on-azure)
       - [Microsoft TechX - Enterprise Blockchain Application Development using Azure Blockchain Service](https://www.microsoftevents.com/profile/web/index.cfm?PKwebID=0x1462051d571&varPage=agenda)
       - [Microsoft TechX - Highlights by Version 1](https://www.version1.com/nw-cld-maz-highlights-from-microsoft-techx-dublin/)
       - [Microsoft TechX - Event Report by Version 1](https://medium.com/version-1/a-day-at-microsoft-techx-dublin-28a7abb71c9c)
       - [Workshop: Blockchain on Azure for Developers](https://www.microsoftevents.com/profile/form/index.cfm?PKformID=0x9650633abcd)
-      - [Conf42 Python 2022 - Microsoft loves Conf42 Python] (https://www.conf42.com/2022-01-25-microsoft-loves-conf42-python)
+      - [Conf42 Python 2022 - Microsoft loves Conf42 Python](https://www.conf42.com/2022-01-25-microsoft-loves-conf42-python)
       - [Guest Lecturer - Hyperledger Technology Workshop - DLT Certification Program - WBS UK](https://www.flickr.com/photos/15201803@N00/48974460052/in/album-72157632977371930/)
       - [Introduction to Blockchain - IT in Dublin Meetup](https://www.flickr.com/photos/15201803@N00/albums/72157670950525778)
       - [Introduction to Blockchain and Blockchain on Azure - Portuguese](https://twitter.com/CloudLunchLearn/status/1393031069100818439)
