--- a/_config.yml
+++ b/_config.yml
@@ -119,8 +119,8 @@ content:
       - [Azure Thursdays - Azure Block Chain Service for Developers](https://www.youtube.com/watch?v=9JsNx_4n11U)    
       - [Limerick .NET Azure Meetup - Microsoft Developers in Ireland](https://twitter.com/ActionPointTech/status/1187425718495567874)         
       - [Cork .NET Azure Meetup - Azure Blockchain Service for Developers](https://www.youtube.com/watch?v=w5744nDwu0E)    
-      - [Sec4Dev - Panel - Cloud Security and Breakout Sessions](https://sec4dev.io/sessions/breakout-sessions-secure-sdlc-security-automation-cloud-security)
-      - [Sec4dev - Panel Speaker](https://sec4dev.io/speakers/juarez-barbosa-junior)
+      - [Sec4Dev - Cloud Security and Breakout Sessions](https://sec4dev.io/sessions/breakout-sessions-secure-sdlc-security-automation-cloud-security)
+      - [Sec4Dev - Panel Speaker](https://sec4dev.io/speakers/juarez-barbosa-junior)
       - [Cloud Lunch and Learn Marathon - Introduction to Blockchain and Blockchain on Azure](https://www.youtube.com/watch?v=obSpCN_kMQk&list=PL2GvM7xKnvFF0vFgasQJQ8fBqwyad4w62&index=65)
       - [Azure Blockchain Zürich - Introduction to Blockchain and Blockchain on Azure](https://info.microsoft.com/WE-DevOps-WBNR-FY21-11Nov-20-MicrosoftDevOpsForum-SRDEM47846_LP02OnDemandRegistration-ForminBody.html) 
       - [Azure Blockchain Zürich - CORDA on Azure](https://www.meetup.com/Azure-Blockchain-Zurich/events/rkbkhryzpblc/)
