--- a/_config.yml
+++ b/_config.yml
@@ -92,9 +92,9 @@ content:
       - [DevRel - Photos](https://www.flickr.com/photos/15201803@N00/page1) 
       - [Microsoft Loves NodeConf Remote 2021](https://www.nearform.com/blog/microsoft-loves-nodeconf-remote-2021/)
       - [Microsoft Loves NodeConf Remote 2021 - TW](https://twitter.com/NodeConfRemote/status/1449377589752176646)
-      - [BRIFW - Brazil Immersive Fashion Week - Blockchain 101](https://brifw.com/festival-2021/)
-      - [BRIFW - Brazil Immersive Fashion Week - Blockchain 101 - pt-BR](https://www.youtube.com/watch?v=R3lOlyB8vA0)
-      - [BRIFW - Brazil Immersive Fashion Week - Immersive Talk - Blockchain 101](https://twitter.com/juarezjunior/status/1452949631097257987)        
+      - [BRIFW - Brazil Immersive Fashion Week - Blockchain 101](https://brifw.com/festival-2021/)      
+      - [BRIFW - Brazil Immersive Fashion Week - Immersive Talk - Blockchain 101](https://twitter.com/juarezjunior/status/1452949631097257987)  
+      - [BRIFW - Brazil Immersive Fashion Week - Blockchain 101 pt-BR](https://www.youtube.com/watch?v=R3lOlyB8vA0)      
       - [Microsoft Ignite 2021 - Get to know the dev communities and partners in Ireland](https://myignite.microsoft.com/sessions/15fe5d38-2fb1-488c-8e9d-371e5ada2180?source=sessions)
       - [Microsoft Ignite 2021 - Get to know the dev communities and partners in Ireland - YT](https://www.youtube.com/watch?v=r7wmz4-RXM0)            
       - [Blockchain on Azure for Developers](https://mktoevents.com/Microsoft+Event/272492/157-GQE-382)             
