--- a/_config.yml
+++ b/_config.yml
@@ -53,6 +53,18 @@ additional_links:
 about_profile_image: images/profile.jpg
 about_content: | # this will include new lines to allow paragraphs
   Hello, I’m Juarez Junior, Azure Developer Engagement Lead at Microsoft. Previously, a Principal Developer Advocate - Blockchain at Oracle and, Thought Leader and Technical Evangelist at IBM.
+  
+  I have held senior leadership roles in developer relations, developer ecosystem outreach, developer community management, business development and strategy, software and solutions engineering as well as startup relationship management comprising collaboration with developer communities, startup founders, accelerators, incubators, mentors, venture capitalists, subject matter experts, and business partners. Ability to present to both technical and non-technical audiences as well as engage the C-Level in technology and business transformation journeys.
+
+  Experience with developer relations and developer marketing programs, technical content creation and curation (articles and blog posts), implementation of code samples and technical guides, social media interactions as well as events organization and promotion. 
+
+  I am an expert in Cloud Computing, Containers and Kubernetes, Blockchain, the Java language and its platforms (Java SE, EE, Embedded), JVMs - Java Virtual Machines, Application Development, Software / Systems / Cloud Architecture, and Mobile Platforms.
+
+  I have acquired solid knowledge and experience over the last 20 years by working as Developer Advocate, Technical Evangelist, Cloud and DevOps Architect, Tech Community Manager, Software Architect, Software and Solutions Engineer, and Technical Lead being part of global, distributed teams at several big technology corporations.
+
+  I have been entitled as IBM Technical RockStar for Cloud, IBM Redbooks Thought Leader and Evangelist for IBM Mobile, Nokia Developer Champion as well as received many awards such as IBM Manager’s Choice Award, Superior Community Service Contributions - Forum Nokia Wiki, IBM Hall of Fame Awards, IBM Common Development and Test Outstanding Contribution Awards and IBM Mobile Enterprise Social Media Residency - Outstanding Contributor. 
+
+  Invite me to speak about #Azure #Blockchain #Java #Cloud #EmergingTechnologies #SolutionsArchitecture
 
   My current interests are: Blockchain, IoT, Hyperledger, Ethereum, Corda, Rust, Kotlin, Java, Go, Solidity, Python, Cloud, DevOps, Docker, Kubernetes, Mobile, AI, Solutions Architecture, Software Architecture, Startups, Emerging Technologies.
 
@@ -94,7 +106,7 @@ content:
       - [Microsoft Loves NodeConf Remote 2021 - TW](https://twitter.com/NodeConfRemote/status/1449377589752176646)
       - [BRIFW - Brazil Immersive Fashion Week - Blockchain 101](https://brifw.com/festival-2021/)      
       - [BRIFW - Brazil Immersive Fashion Week - Immersive Talk - Blockchain 101](https://twitter.com/juarezjunior/status/1452949631097257987)  
-      - [BRIFW - Brazil Immersive Fashion Week - Blockchain 101 pt-BR](https://www.youtube.com/watch?v=R3lOlyB8vA0)      
+      - [BRIFW - Brazil Immersive Fashion Week - Blockchain 101 - pt-BR](https://www.youtube.com/watch?v=R3lOlyB8vA0)      
       - [Microsoft Ignite 2021 - Get to know the dev communities and partners in Ireland](https://myignite.microsoft.com/sessions/15fe5d38-2fb1-488c-8e9d-371e5ada2180?source=sessions)
       - [Microsoft Ignite 2021 - Get to know the dev communities and partners in Ireland - YT](https://www.youtube.com/watch?v=r7wmz4-RXM0)            
       - [Blockchain on Azure for Developers](https://mktoevents.com/Microsoft+Event/272492/157-GQE-382)             
