--- a/_config.yml
+++ b/_config.yml
@@ -60,13 +60,13 @@ about_content: | # this will include new lines to allow paragraphs
 
   I am an expert in Cloud Computing, Containers and Kubernetes, Blockchain, the Java language and its platforms (Java SE, EE, Embedded), JVMs - Java Virtual Machines, Application Development, Software / Systems / Cloud Architecture, and Mobile Platforms.
 
-  I have acquired solid knowledge and experience over the last 20 years by working as Developer Advocate, Technical Evangelist, Cloud and DevOps Architect, Tech Community Manager, Software Architect, Software and Solutions Engineer, and Technical Lead being part of global, distributed teams at several big technology corporations.
+  I have acquired solid knowledge and experience over the last 20 years by working as a Developer Advocate, Technical Evangelist, Cloud and DevOps Architect, Tech Community Manager, Software Architect, Software and Solutions Engineer, and Technical Lead being part of global, distributed teams at several big technology corporations.
 
   I have been entitled as IBM Technical RockStar for Cloud, IBM Redbooks Thought Leader and Evangelist for IBM Mobile, Nokia Developer Champion as well as received many awards such as IBM Manager’s Choice Award, Superior Community Service Contributions - Forum Nokia Wiki, IBM Hall of Fame Awards, IBM Common Development and Test Outstanding Contribution Awards and IBM Mobile Enterprise Social Media Residency - Outstanding Contributor. 
 
-  Invite me to speak about #Azure #Blockchain #Java #Cloud #EmergingTechnologies #SolutionsArchitecture
-
   My current interests are: Blockchain, IoT, Hyperledger, Ethereum, Corda, Rust, Kotlin, Java, Go, Solidity, Python, Cloud, DevOps, Docker, Kubernetes, Mobile, AI, Solutions Architecture, Software Architecture, Startups, Emerging Technologies.
+  
+  Invite me to speak about #Azure #Blockchain #Java #Cloud #EmergingTechnologies #SolutionsArchitecture
 
 content:
     
